--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,21 +8,29 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Recibidor">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name=".Recibidor" />
+        <activity android:name=".Laboratorio" >
+            <uses-permission android:name="android.permission.VIBRATE" />
         </activity>
-        <activity android:name=".Laboratorio" />
         <activity android:name=".Jardin" />
         <activity android:name=".Pasillo" />
         <activity android:name=".HabPrincipal" />
         <activity android:name=".HabInvitados" />
         <activity android:name=".Sotano" />
         <activity android:name=".SalaRitual" />
-        <activity android:name=".Cocina"></activity>
+        <activity android:name=".Cocina" />
+        <activity android:name=".FinPartida" />
+        <activity android:name=".StartGame">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".IntroHistory" />
+        <activity android:name=".Pista1" />
+        <activity android:name=".Pista2" />
+        <activity android:name=".Pista3"></activity>
     </application>
 
 </manifest>
